--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,8 @@
   ],
   "require": {
     "php": ">=5.6",
-    "jms/serializer": "~1.4",
-    "eloquent/enumeration": "^5.1",
+    "jms/serializer": ">=1.4",
+    "eloquent/enumeration": ">=5.1",
     "php-http/httplug": "^1.1",
     "php-http/discovery": "^1.0",
     "php-http/message": "^1.0",
